--- a/QuizWebsite.Web/Views/Home/Index.cshtml
+++ b/QuizWebsite.Web/Views/Home/Index.cshtml
@@ -1,8 +1,6 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
-
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+﻿
+<div class="text-center full-center">
+    <button class="btn btn-primary">SinglePlayer</button> <br />
+    <button disabled class="btn btn-primary mt-4">MultiPlayer</button> <br />
+    <button class="btn btn-primary mt-4 mb-5">About</button>
 </div>
