--- a/QuizWebsite.Web/wwwroot/css/site.css
+++ b/QuizWebsite.Web/wwwroot/css/site.css
@@ -69,3 +69,9 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+.full-center {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
