--- a/QuizWebsite.Web/Views/Home/Index.cshtml
+++ b/QuizWebsite.Web/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 <div class="text-center full-center">
-    <button class="btn btn-primary">SinglePlayer</button> <br />
+    <a class="btn btn-primary" asp-action="SinglePlayer">SinglePlayer</a> <br />
     <button disabled class="btn btn-primary mt-4">MultiPlayer</button> <br />
-    <button class="btn btn-primary mt-4 mb-5">About</button>
+    <a class="btn btn-primary mt-4 mb-5" asp-action="About">About</a>
 </div>
