Add new controller for singleplayer

--- a/QuizWebsite.Web/Views/Home/Index.cshtml
+++ b/QuizWebsite.Web/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 <div class="text-center full-center">
-    <a class="btn btn-primary" asp-action="SinglePlayer">SinglePlayer</a> <br />
+    <a class="btn btn-primary" asp-action="Index" asp-controller="SinglePlayer">SinglePlayer</a> <br />
     <button disabled class="btn btn-primary mt-4">MultiPlayer</button> <br />
     <a class="btn btn-primary mt-4 mb-5" asp-action="About">About</a>
 </div>
