--- a/QuizWebsite.Web/Views/SinglePlayer/Index.cshtml
+++ b/QuizWebsite.Web/Views/SinglePlayer/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿
 <div class="text-center full-center">
-    <a class="btn btn-primary mb-5" asp-action="Classic">Classic</a> <br />
-    <a class="btn btn-primary mb-5" asp-action="Unlimited">Unlimited</a> <br />
+    <a class="btn btn-primary mb-5" asp-action="Classic" asp-controller="SinglePlayer">Classic</a> <br />
+    <a class="btn btn-primary mb-5" asp-action="Unlimited" asp-controller="SinglePlayer">Unlimited</a> <br />
 </div>
