Add views with design

--- a/QuizWebsite.Vue/Views/SinglePlayer/Index.cshtml
+++ b/QuizWebsite.Vue/Views/SinglePlayer/Index.cshtml
@@ -1,7 +1,5 @@
 ﻿
-@{
-    ViewData["Title"] = "Index";
-}
-
-<h1>Index</h1>
-
+<div class="text-center full-center">
+    <a class="btn btn-primary mb-5" asp-action="Classic" asp-controller="SinglePlayer">Classic</a> <br />
+    <a class="btn btn-primary mb-5" asp-action="Unlimited" asp-controller="SinglePlayer">Unlimited</a> <br />
+</div>
