--- a/QuizWebsite.Vue/Views/Home/Index.cshtml
+++ b/QuizWebsite.Vue/Views/Home/Index.cshtml
@@ -1,8 +1,6 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
-
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+﻿
+<div class="text-center full-center">
+    <a class="btn btn-primary" asp-action="Index" asp-controller="SinglePlayer">SinglePlayer</a> <br />
+    <button disabled class="btn btn-primary mt-4">MultiPlayer</button> <br />
+    <a class="btn btn-primary mt-4 mb-5" asp-action="About">About</a>
 </div>
