--- a/QuizWebsite.Vue/Views/SinglePlayer/Unlimited.cshtml
+++ b/QuizWebsite.Vue/Views/SinglePlayer/Unlimited.cshtml
@@ -1,7 +1,13 @@
-﻿
-@{
-    ViewData["Title"] = "Unlimited";
+﻿<b>score: @Model.Player.Score</b>
+
+
+@foreach (var question in Model.Questions)
+{
+    <div class="mt-2">
+        @question.QuestionText <br />
+        @foreach (var answer in question.Answers)
+        {
+            @answer.AnswerText <br />
+        }
+    </div>
 }
-
-<h1>Unlimited</h1>
-
