--- a/QuizWebsite.Vue/wwwroot/css/site.css
+++ b/QuizWebsite.Vue/wwwroot/css/site.css
@@ -75,3 +75,36 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
 }
+.center-block {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+.unanswered {
+    margin-left: 2rem;
+    margin-right: 2rem;
+    margin-top: 0.5rem;
+    background-color: #dbdbdb;
+    width: 10em;
+    padding: 0.6em;
+    border: 1px solid #e3e3e3;
+    border-radius: 25px;
+    display: inline-block;
+    -webkit-user-select: none; /* Safari */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE10+/Edge */
+    user-select: none; /* Standard */
+}
+
+.unanswered:hover{
+    background-color: #e3e3e3;
+}
+.radius {
+    border-radius: 10px;
+    border: 2px solid #808080;
+}
+    .radius:focus {
+        outline: none;
+        box-shadow: 0px 0px 2px #808080;
+    }
+
