--- a/QuizWebsite.Vue/Views/SinglePlayer/Unlimited.cshtml
+++ b/QuizWebsite.Vue/Views/SinglePlayer/Unlimited.cshtml
@@ -19,18 +19,22 @@
         <table class="w-100 horizontal-center">
             <tr v-for="index in 5" class="text-center">
                 <td class="unanswered text-center">
-                    <b v-if="answers.length == 10">{{answers[index-1].answerText}}</b>
+                    <b v-if="answers.length == 10 && answered[index-1]">{{answers[index-1].answerText}}</b>
                     <b v-else>{{index}}</b>
                 </td>
                 <td class="text-center unanswered">
-                    <b v-if="answers.length == 10">{{answers[index+4].answerText}}</b>
+                    <b v-if="answers.length == 10 && answered[index+4]">{{answers[index+4].answerText}}</b>
                     <b v-else>{{index+5}}</b>
                 </td>
             </tr>
         </table>
-
-
     </div>
+    <center>
+        <div class="mt-3">
+            <button class="btn btn-dark" v-if="guessed" v-on:click="ShowAllQuestions">Show Answers</button>
+            <button class="btn btn-dark" v-if="guessed" v-on:click="NextQuestion">Next Question</button>
+        </div>
+    </center>
 </div>
 
 
@@ -66,14 +70,17 @@
         },
         methods: {
             ShowAllQuestions: function () {
-                if (this.answers.length != 10) {
-                    this.answers = [];
-                    for (var i = 1; i < 11; i++) {
-                        this.answers.push(this.question[this.currentQuestion].answers.filter(function (el) {
-                            return el.points == i
-                        })[0]);
-                    }
+                console.log("a")
+                this.answers = [];
+                for (var i = 1; i < 11; i++) {
+                    this.answers.push(this.question[this.currentQuestion].answers.filter(function (el) {
+                        return el.points == i
+                    })[0]);
                 }
+                console.log(this.answers)
+                this.answered = [true, true, true, true, true,
+                    true, true, true, true, true]
+
             },
             ShowGuessedAnswers: function () {
                 this.answers = [];
@@ -102,8 +109,11 @@
                 this.guesses++
             },
             NextQuestion: function () {
-                this.currentQuestion++;
+                this.answered = [false, false, false, false, false,
+                    false, false, false, false, false]
                 this.guessed = false
+                this.answer = ""
+                this.currentQuestion++;
             }
         },
     });
