--- a/QuizWebsite.Vue/Views/Shared/_Layout.cshtml
+++ b/QuizWebsite.Vue/Views/Shared/_Layout.cshtml
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - QuizWebsite.Web</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <script src="~/js/Constants.js"></script>
     <script src="~/lib/jquery/jquery.min.js"></script>
     <script src="~/lib/vue/vue.js"></script>
     <script src="~/lib/axios/axios.js"></script>
