--- a/QuizWebsite.Vue/Views/SinglePlayer/Unlimited.cshtml
+++ b/QuizWebsite.Vue/Views/SinglePlayer/Unlimited.cshtml
@@ -8,16 +8,14 @@
 
     </table>
 
-    <center class="m-3">
+    <div class="m-3 flex-h-center">
         <div v-if="question[0].id == ''" class="loader text-center"></div>
         <h3 class="text-center" v-else>{{question[currentQuestion].questionText}}</h3>
-    </center>
-    <center>
-        <div class="center-block input-group mb-3">
-            <input type="text" name="name" value="" class="radius mr-4" v-model="answer" v-on:keyup.enter="Submit" />
-            <button class="btn btn-dark" v-on:click="Submit">Confirm</button>
-        </div>
-    </center>
+    </div>
+    <div class="center-block input-group mb-3 flex-h-center">
+        <input type="text" name="name" value="" class="radius mr-4" v-model="answer" v-on:keyup.enter="Submit" />
+        <button class="btn btn-dark" v-on:click="Submit">Confirm</button>
+    </div>
     <div class="horizontal-center">
         <table class="w-100 horizontal-center">
             <tr v-for="index in 5" class="text-center">
@@ -32,12 +30,12 @@
             </tr>
         </table>
     </div>
-    <center>
+    <div class="flex-h-center">
         <div class="mt-3">
             <button class="btn btn-dark" v-if="guessed" v-on:click="ShowAllQuestions">Show Answers</button>
             <button class="btn btn-dark" v-if="guessed" v-on:click="NextQuestion">Next Question</button>
         </div>
-    </center>
+    </div>
 </div>
 
 
