--- a/QuizWebsite.Vue/Views/SinglePlayer/Unlimited.cshtml
+++ b/QuizWebsite.Vue/Views/SinglePlayer/Unlimited.cshtml
@@ -103,6 +103,11 @@
                     this.score += correctAnswer[0].points
                     this.answered[correctAnswer[0].points - 1] = true
                     this.ShowGuessedAnswers();
+                    var audio = new Audio('../audio/correct.mp3');
+                    audio.play();
+                } else {
+                    var audio = new Audio('../audio/wrong.mp3');
+                    audio.play();
                 }
 
                 this.answer = ""
