--- a/QuizWebsite.Vue/Views/SinglePlayer/Unlimited.cshtml
+++ b/QuizWebsite.Vue/Views/SinglePlayer/Unlimited.cshtml
@@ -74,7 +74,7 @@
                 this.answers = [];
                 for (var i = 1; i < 11; i++) {
                     this.answers.push(this.question[this.currentQuestion].answers.filter(function (el) {
-                        return el.points == i
+                        return el.place == i
                     })[0]);
                 }
                 this.answered = [true, true, true, true, true,
@@ -86,7 +86,7 @@
                 for (var i = 0; i < 10; i++) {
                     if (this.answered[i]) {
                         this.answers.push(this.question[this.currentQuestion].answers.filter(function (el) {
-                            return el.points == i + 1
+                            return el.place == i + 1
                         })[0]);
                     } else {
                         this.answers.push({
@@ -99,7 +99,7 @@
                 let correctAnswer = this.question[this.currentQuestion].answers.filter(x => //Is there same value with toUpper() and removeSpaces()
                     x.answerText.toUpperCase().replace(/ /g, '') == this.answer.toUpperCase().replace(/ /g, ''));
 
-                if (correctAnswer.length == 1 && this.answered[correctAnswer[0].points - 1] != true) {
+                if (correctAnswer.length == 1 && this.answered[correctAnswer[0].place - 1] != true) {
                     this.score += correctAnswer[0].points
                     this.answered[correctAnswer[0].points - 1] = true
                     this.ShowGuessedAnswers();
