--- a/QuizWebsite.Vue/Views/SinglePlayer/Unlimited.cshtml
+++ b/QuizWebsite.Vue/Views/SinglePlayer/Unlimited.cshtml
@@ -71,14 +71,19 @@
         },
         methods: {
             ShowAllQuestions: function () {
-                this.answers = [];
-                for (var i = 1; i < 11; i++) {
-                    this.answers.push(this.question[this.currentQuestion].answers.filter(function (el) {
-                        return el.place == i
-                    })[0]);
-                }
-                this.answered = [true, true, true, true, true,
-                    true, true, true, true, true]
+                axios
+                    .get(url + "api/Question/" + this.question[this.currentQuestion].id)
+                    .then(response => {
+                        this.question[this.currentQuestion] = response.data
+                        this.answers = [];
+                        for (var i = 1; i < 11; i++) {
+                            this.answers.push(this.question[this.currentQuestion].answers.filter(function (el) {
+                                return el.place == i
+                            })[0]);
+                        }
+                        this.answered = [true, true, true, true, true,
+                            true, true, true, true, true]
+                    })
 
             },
             ShowGuessedAnswers: function () {
@@ -96,19 +101,24 @@
                 }
             },
             Submit: function () {
-                let correctAnswer = this.question[this.currentQuestion].answers.filter(x => //Is there same value with toUpper() and removeSpaces()
-                    x.answerText.toUpperCase().replace(/ /g, '') == this.answer.toUpperCase().replace(/ /g, ''));
-
-                if (correctAnswer.length == 1 && this.answered[correctAnswer[0].place - 1] != true) {
-                    this.score += correctAnswer[0].points
-                    this.answered[correctAnswer[0].place - 1] = true
-                    this.ShowGuessedAnswers();
-                    var audio = new Audio('../audio/correct.mp3');
-                    audio.play();
-                } else {
-                    var audio = new Audio('../audio/wrong.mp3');
-                    audio.play();
+                let answerRequest = {
+                    answerText: this.answer
                 }
+                axios
+                    .post(url + "api/Question/" + this.question[this.currentQuestion].id + "/answer", answerRequest)
+                    .then(response => {
+                        console.log(response.data)
+                        if (response.data.points == 0) {
+                            var audio = new Audio('../audio/wrong.mp3');
+                            audio.play();
+                        } else {
+                            this.score += response.data.place
+                            this.answered[response.data.place - 1] = true
+                            this.ShowGuessedAnswers();
+                            var audio = new Audio('../audio/correct.mp3');
+                            audio.play();
+                        }
+                    })
 
                 this.answer = ""
                 this.guessed = true
