--- a/QuizWebsite.Vue/wwwroot/css/site.css
+++ b/QuizWebsite.Vue/wwwroot/css/site.css
@@ -24,6 +24,10 @@ a {
     border-color: #1861ac;
 }
 
+h5{
+    font-weight:bold;
+}
+
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
