Change layout unlimited page

--- a/QuizWebsite.Vue/Views/SinglePlayer/Unlimited.cshtml
+++ b/QuizWebsite.Vue/Views/SinglePlayer/Unlimited.cshtml
@@ -1,9 +1,9 @@
 ﻿<div id="app" class="horizontal-center m-2">
     <table class="w-100">
         <tr>
-            <td class="text-left p-33"><b>Score: {{score}}</b></td>
-            <td class="text-center p-33"><b>Guesses: {{guesses}}</b></td>
-            <td class="text-right p-33"><b>Question: {{currentQuestion + 1}}</b> </td>
+            <td class="text-left p-33"><h5>Score: {{score}}</h5></td>
+            <td class="text-center p-33"><h5>Guesses: {{guesses}}</h5></td>
+            <td class="text-right p-33"><h5>Question: {{currentQuestion + 1}}</h5> </td>
         </tr>
 
     </table>
