--- a/QuizWebsite.Vue/wwwroot/css/site.css
+++ b/QuizWebsite.Vue/wwwroot/css/site.css
@@ -34,6 +34,73 @@ html {
     font-size: 14px;
 }
 
+/*PieLoader*/
+
+.wrapper {
+    position: relative;
+    width: 50px;
+    height: 50px;
+    overflow: hidden;
+}
+
+.leftHalf, .rightHalf, .spinner {
+    top: 0;
+    position: absolute;
+    width: 50%;
+    height: 100%;
+}
+
+.leftHalf {
+    left: 0;
+    background: #fff;
+    z-index: 3;
+    opacity: 1;
+    -webkit-animation: showHide 2s infinite steps(1, end);
+    border-radius: 100% 0 0 100%/ 50% 0 0 50%;
+}
+
+.rightHalf {
+    right: 0;
+    background: #1861ac;
+    z-index: 1;
+    opacity: 0;
+    -webkit-animation: showHide 2s infinite steps(1, end) reverse;
+    border-radius: 0 100% 100% 0/ 0 50% 50% 0;
+}
+
+.spinner {
+    overflow: hidden;
+    left: 0;
+    background: #1861ac;
+    -webkit-animation: spin 2s linear infinite;
+    -webkit-transform-origin: center right;
+    z-index: 2;
+    border-radius: 100% 0 0 100%/ 50% 0 0 50%;
+}
+
+@-webkit-keyframes spin {
+    0% {
+        -webkit-transform: rotate(0deg);
+    }
+
+    100% {
+        -webkit-transform: rotate(360deg);
+    }
+}
+
+@-webkit-keyframes showHide {
+    0% {
+        opacity: 1;
+    }
+
+    50%, 100% {
+        opacity: 0;
+    }
+}
+
+
+/*------------------------------------------------ */
+
 @media (min-width: 768px) {
     html {
         font-size: 16px;
