--- a/QuizWebsite.Vue/Views/SinglePlayer/Classic.cshtml
+++ b/QuizWebsite.Vue/Views/SinglePlayer/Classic.cshtml
@@ -8,13 +8,20 @@
 
     </table>
 
-    <div class="m-3 flex-h-center">
+    <div class="m-3 flex-h-center" v-if="!gameOver">
         <div v-if="question[0].id == ''" class="loader text-center"></div>
         <h3 class="text-center" v-else>{{question[currentQuestion].questionText}}</h3>
     </div>
-    <div class="center-block input-group mb-3 flex-h-center">
-        <input type="text" name="name" value="" class="radius mr-4" v-model="answer" v-on:keyup.enter="Submit" />
-        <button class="btn btn-dark" v-on:click="Submit">Confirm</button>
+    <div class="center-block input-group mb-3 flex-h-center" v-if="!gameOver">
+        <div v-if="!guessed" class="center-block input-group mb-3 flex-h-center">
+            <input type="text" name="name" value="" class="radius mr-4" v-model="answer" v-on:keyup.enter="Submit" />
+            <button class="btn btn-dark" v-on:click="Submit">Confirm</button>
+        </div>
+        <div v-else class="wrapper">
+            <div class="leftHalf"></div>
+            <div class="spinner"></div>
+            <div class="rightHalf"></div>
+        </div>
     </div>
     <div class="horizontal-center">
         <table class="w-100 horizontal-center">
@@ -50,7 +57,7 @@
                 },
                 id: ""
             }],
-
+            gameOver: false,
             answered: [false, false, false, false, false,
                 false, false, false, false, false],
             answers: [],
@@ -80,13 +87,18 @@
                             var audio = new Audio('../audio/correct.mp3');
                             audio.play();
                             this.ShowGuessedAnswers(response.data);
-                            setTimeout(() => this.NextQuestion(), 2800);
+                            setTimeout(() => this.NextQuestion(), 2000);
                         } else {
-                            this.wrongAnswers++;
-                            var audio = new Audio('../audio/wrong.mp3');
-                            audio.play();
-                            if (this.wrongAnswers != 3) {
-                                setTimeout(() => this.NextQuestion(), 2800);
+                            if (this.wrongAnswers <= 2) {
+                                console.log(this.wrongAnswers)
+                                var audio = new Audio('../audio/wrong.mp3');
+                                audio.play();
+                                this.wrongAnswers++;
+                                if (this.wrongAnswers <= 2) {
+                                    setTimeout(() => this.NextQuestion(), 2000);
+                                } else {
+                                    this.gameOver = true;
+                                }
                             } else {
 
                             }
