--- a/QuizWebsite.Vue/Views/SinglePlayer/Classic.cshtml
+++ b/QuizWebsite.Vue/Views/SinglePlayer/Classic.cshtml
@@ -7,7 +7,7 @@
         </tr>
 
     </table>
-    <div v-if="gameOver">
+    <div v-if="!gameOver">
         <div class="m-3 flex-h-center">
             <div v-if="question[0].id == ''" class="loader text-center"></div>
             <h3 class="text-center" v-else>{{question[currentQuestion].questionText}}</h3>
@@ -38,10 +38,10 @@
             </table>
         </div>
     </div>
-    <div class="m-5">
+    <div v-else class="m-5">
         <h1 class="flex-h-center">Game Over</h1><br />
         <div class="flex-h-center">
-            <button class="btn btn-dark" v-on:click="">Try Again</button>
+            <button class="btn btn-dark" v-on:click="TryAgain">Try Again</button>
         </div>
     </div>
 </div>
@@ -121,6 +121,20 @@
                 this.guessed = false
                 this.answer = ""
                 this.currentQuestion++;
+            },
+            TryAgain: function () {
+                axios
+                    .get(RandomQuestionListUrl)
+                    .then(response => this.question = response.data)
+                this.score = 0
+                this.currentQuestion = 0
+                this.gameOver = false
+                this.answered = [false, false, false, false, false,
+                    false, false, false, false, false]
+                this.answers = []
+                this.answer = ""
+                this.wrongAnswers = 0
+                this.guessed = false
             }
         },
     });
