Change wrong to strikes

--- a/QuizWebsite.Vue/Views/SinglePlayer/Classic.cshtml
+++ b/QuizWebsite.Vue/Views/SinglePlayer/Classic.cshtml
@@ -2,7 +2,7 @@
     <table class="w-100">
         <tr>
             <td class="text-left p-33"><h5>Score: {{score}}</h5></td>
-            <td class="text-center p-33"><h5>Wrong: <span v-for="mistake in wrongAnswers">x</span></h5></td>
+            <td class="text-center p-33"><h5>Strikes: <span v-for="mistake in wrongAnswers">x</span></h5></td>
             <td class="text-right p-33"><h5>Question: {{currentQuestion + 1}}</h5></td>
         </tr>
 
