--- a/QuizWebsite.Vue/Views/SinglePlayer/Classic.cshtml
+++ b/QuizWebsite.Vue/Views/SinglePlayer/Classic.cshtml
@@ -14,7 +14,7 @@
         </div>
         <div class="center-block input-group mb-3 flex-h-center" v-if="!gameOver">
             <div v-if="!guessed" class="center-block input-group mb-3 flex-h-center">
-                <input type="text" name="name" value="" autocomplete="off" class="radius mr-4" v-model="answer" v-on:keyup.enter="Submit" />
+                <input id="answer" type="text" name="name" value="" autocomplete="off" class="radius mr-4" v-model="answer" v-on:keyup.enter="Submit" />
                 <button class="btn btn-dark" v-on:click="Submit">Confirm</button>
             </div>
             <div v-else class="wrapper">
@@ -75,7 +75,10 @@
         created: function () {
             axios
                 .get(RandomQuestionListUrl)
-                .then(response => this.question = response.data)
+                .then(response => {
+                    this.question = response.data
+                    document.getElementById("answer").focus();
+                })
         },
         methods: {
             ShowGuessedAnswers: function (answerResponse) {
@@ -121,6 +124,7 @@
                 this.guessed = false
                 this.answer = ""
                 this.currentQuestion++;
+                document.getElementById("answer").focus();
             },
             TryAgain: function () {
                 axios
