--- a/QuizWebsite.Vue/Views/SinglePlayer/Unlimited.cshtml
+++ b/QuizWebsite.Vue/Views/SinglePlayer/Unlimited.cshtml
@@ -13,7 +13,7 @@
         <h3 class="text-center" v-else>{{question[currentQuestion].questionText}}</h3>
     </div>
     <div class="center-block input-group mb-3 flex-h-center">
-        <input type="text" name="name" value="" class="radius mr-4" autocomplete="off" v-model="answer" v-on:keyup.enter="Submit" />
+        <input id="answer" type="text" name="name" value="" class="radius mr-4" autocomplete="off" v-model="answer" v-on:keyup.enter="Submit" />
         <button class="btn btn-dark" v-on:click="Submit">Confirm</button>
     </div>
     <div class="horizontal-center">
@@ -67,8 +67,10 @@
         created: function () {
             axios
                 .get(RandomQuestionListUrl)
-                .then(response => this.question = response.data)
-        },
+                .then(response => {
+                    this.question = response.data
+                    document.getElementById("answer").focus();
+                })        },
         methods: {
             ShowAllQuestions: function () {
                 axios
