Add category button

--- a/QuizWebsite.Vue/Views/SinglePlayer/Index.cshtml
+++ b/QuizWebsite.Vue/Views/SinglePlayer/Index.cshtml
@@ -3,3 +3,4 @@
     <a class="btn btn-primary mb-5" asp-action="Classic" asp-controller="SinglePlayer">Classic</a> <br />
     <a class="btn btn-primary mb-5" asp-action="Unlimited" asp-controller="SinglePlayer">Unlimited</a> <br />
 </div>
+<div><a class="btn btn-primary top-right-absolute" asp-action="Categories" asp-controller="SinglePlayer" href="#">Categories</a></div>
