--- a/QuizWebsite.Vue/wwwroot/css/site.css
+++ b/QuizWebsite.Vue/wwwroot/css/site.css
@@ -215,3 +215,9 @@ body {
         transform: rotate(360deg);
     }
 }
+
+.top-right-absolute {
+    position: absolute;
+    top: 2em;
+    left: 2em;
+}
