--- a/QuizWebsite.Vue/Views/SinglePlayer/Classic.cshtml
+++ b/QuizWebsite.Vue/Views/SinglePlayer/Classic.cshtml
@@ -49,6 +49,17 @@
 
 
 <script>
+    function GetCookie(name) {
+
+        var c = document.cookie.split(';');
+        cookies = {};
+        for (i = c.length - 1; i >= 0; i--) {
+            C = c[i].split('=');
+            cookies[C[0]] = C[1];
+        }
+        return cookies[name]
+    }
+
     var app = new Vue({
         el: "#app",
         data: {
@@ -65,6 +76,7 @@
                 },
                 id: ""
             }],
+            cookie: [],
             gameOver: false,
             answered: [false, false, false, false, false,
                 false, false, false, false, false],
@@ -74,8 +86,13 @@
             guessed: false
         },
         created: function () {
+            if (typeof (GetCookie("CategoryPreference")) != "undefined") {
+                this.cookie = GetCookie("CategoryPreference")
+            } else {
+                this.cookie = null
+            }
             axios
-                .get(RandomQuestionListUrl)
+                .get(url + "api/Questions/randomize?categoryIds=" + this.cookie + "&type=Top 10")
                 .then(response => {
                     this.question = response.data
                     document.getElementById("answer").focus();
@@ -90,7 +107,7 @@
                     answerText: this.answer
                 }
                 axios
-                    .post(url + "api/Question/" + this.question[this.currentQuestion].id + "/answer", answerRequest)
+                    .post(url + "api/Questions/" + this.question[this.currentQuestion].id + "/answer", answerRequest)
                     .then(response => {
                         if (response.data.points != 0 && this.answered[response.data.place - 1] == false) {
                             this.score += response.data.place
